--- a/epi_wiew/src/index.css
+++ b/epi_wiew/src/index.css
@@ -5,10 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://placeimg.com/960/540/tech);
+  background-image: url(./img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: blur(10px);
 }
 
 code {
