--- a/epi_wiew/src/index.css
+++ b/epi_wiew/src/index.css
@@ -4,8 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url(./img/bg.png);
+  -moz-osx-font-smoothing: grayscale(100%);
+  /* background-image: url(./img/bg.png); */
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -21,4 +21,20 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: calc(33.33% - 20px);
+  margin: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.card img {
+  width: 100%;
 }
